# aoc2025

./: .gitignore  CMakeLists.txt  Makefile  README.md  day01.cpp  day02.cpp
.github/workflows/: cmake-single-platform.yml
include/: joltage.hpp  range_tools.hpp
src/: compute.cpp  day01.cpp  day02.cpp  day03.cpp  joltage.cpp  joltage.hpp  range_tools.cpp
tests/: test_day03.cpp
